<resources>
    <string name="app_name">太极虎</string>
    <string name="ts_response_failure">网络不给力</string>
    <string name="ts_response_server_failure">服务器不给力</string>
    <string name="text_tap_one_more_exit">再按一次退出</string>
    <string name="item_name_my_order">我的订单</string>
    <string name="item_name_my_favor">我的收藏</string>
    <string name="item_name_money_admin">资金管理</string>
    <string name="item_name_security_center">安全中心</string>
    <string name="item_name_about_tiger">关于健身虎</string>
    <string name="text_more">更多></string>
    <string name="icon_add_team">建团队</string>
    <string name="icon_find_team">找团队</string>
    <string name="icon_hot_event">热门活动</string>
    <string name="text_my_team">我的团队</string>
    <string name="title_event">约球</string>
    <string name="title_add_my_team">创建我的团队</string>
    <string name="title_event_list">活动列表</string>
    <string name="title_my_info">我的资料</string>
    <string name="title_register">注册</string>
    <string name="text_account_login">账号登录</string>
    <string name="text_mobile_fast_login_"><![CDATA[手机快速登录>]]></string>
    <string name="text_register">注册</string>
    <string name="text_tiger_agreement">《健身虎用户协议》</string>
    <string name="text_commit">提交</string>
    <string name="text_communicate_customer_service">联系客服</string>
    <string name="title_about_tiger">关于健身虎</string>
    <string name="title_admin_address">管理我的地址</string>
    <string name="title_security_center">安全中心</string>
    <string name="text_account_balance">账户余额</string>
    <string name="text_bind_card">绑定银行卡</string>
    <string name="text_flow_record">流水记录</string>
    <string name="title_admin_money">资金管理</string>
    <string name="title_my_favor">我的收藏</string>
    <string name="text_buy_now">立即购买</string>
    <string name="text_confirm">确定</string>
    <string name="title_bind_bank_card">绑定银行卡</string>
    <string name="text_bind_new_bank_card">绑定新的银行卡</string>
    <string name="text_agree_commit">同意协议并确定</string>
    <string name="title_reset_password">重置密码</string>
    <string name="title_flow_record">流水记录</string>
    <string name="title_massage">推拿</string>
    <string name="title_detail_gym">健身房详情</string>
    <string name="title_detail_gym_card">健身卡详情</string>
    <string name="title_detail_coach">私教详情</string>
    <string name="title_detail_massage">项目详情</string>
    <string name="text_masseuse_high">高级技师</string>
    <string name="text_masseuse_special">特技技师</string>
    <string name="text_masseuse_expert">专家技师</string>
    <string name="title_event_enroll">我要报名</string>
    <string name="title_order_commit">提交订单</string>
    <string name="text_order_commit">提交订单</string>
    <string name="text_bound_phone">您绑定的手机号</string>
    <string name="text_use_new_phone">使用新号码</string>
</resources>
