<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@mipmap/bg_page_me"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sivHead"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:placeholderImageScaleType="centerCrop"
            app:roundAsCircle="true"
            app:roundingBorderColor="@color/white"
            app:roundingBorderWidth="2dp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/activity_horizontal_margin"
            tools:text="18571465367" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.taichitiger.client.view.ListItem
                android:id="@+id/itemOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIcon="@mipmap/ic_order"
                app:itemName="@string/item_name_my_order"
                app:itemType="0" />

            <View style="@style/divider" />

            <com.taichitiger.client.view.ListItem
                android:id="@+id/itemFavor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIcon="@mipmap/ic_favorite"
                app:itemName="@string/item_name_my_favor"
                app:itemType="0" />

            <View style="@style/divider" />

            <com.taichitiger.client.view.ListItem
                android:id="@+id/itemMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIcon="@mipmap/ic_money"
                app:itemName="@string/item_name_money_admin"
                app:itemType="0" />

            <View style="@style/divider" />

            <com.taichitiger.client.view.ListItem
                android:id="@+id/itemSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIcon="@mipmap/ic_shield"
                app:itemName="@string/item_name_security_center"
                app:itemType="0" />

            <View style="@style/divider" />

            <com.taichitiger.client.view.ListItem
                android:id="@+id/itemAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:itemIcon="@mipmap/ic_logo"
                app:itemName="@string/item_name_about_tiger"
                app:itemType="0" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
