<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.xycode.xylibrary.uiKit.views.loopview.AdLoopView
        android:id="@+id/loopView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:aspectRatio="2.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAddTeam"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_home_side"
                android:src="@mipmap/ic_add_team" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/icon_add_team"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llFindTeam"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_home_side"
                android:src="@mipmap/ic_find_team" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/icon_find_team"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llHotEvent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_home_side"
                android:src="@mipmap/ic_flag" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/icon_hot_event"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ivMore"
            android:text="@string/text_my_team"
            android:textSize="@dimen/text_size_12"
            android:paddingTop="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <View style="@style/divider" />


</LinearLayout>
