<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgActivity"
    android:orientation="vertical"
    tools:context="com.taichitiger.client.activity.RegisterActivity">

    <include layout="@layout/appbar" />

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:text="@string/text_account_login"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/textNormal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/etName"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textNormal"
            android:hint="@string/text_mobile_fast_login_"
            android:textSize="@dimen/text_size_15" />

        <ImageView
            android:id="@+id/ivWarning"
            android:visibility="invisible"
            android:src="@mipmap/ic_warning"
            android:layout_alignParentRight="true"
            android:layout_width="20dp"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <View style="@style/divider" />

    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlPhone"
            android:hint="手机号"
            android:textColorHint="@color/textLite"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/textNormal"
                android:background="@null"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCode"
            android:text="获取验证码"
            android:textSize="@dimen/text_size_13"
            style="@style/btn"
            android:theme="@style/btnOption"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="112dp"
            android:layout_height="44dp" />

    </RelativeLayout>

    <View style="@style/divider" />

    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlCode"
            android:hint="验证码"
            android:textColorHint="@color/textLite"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/textNormal"
                android:background="@null"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <View style="@style/divider" />

    <RelativeLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlPassword"
            android:hint="密码"
            android:textColorHint="@color/textLite"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:textSize="@dimen/text_size_15"
                android:textColor="@color/textNormal"
                android:background="@null"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/ivShowPassword"
            android:src="@mipmap/ic_eye_open"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            android:padding="4dp"
            android:layout_width="36dp"
            android:layout_height="36dp" />

    </RelativeLayout>

    <View style="@style/divider" />

        <Button
            android:id="@+id/btnCommit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnFullHeight"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_register"
            style="@style/btn"
            android:theme="@style/btnCommitFull" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="点击注册表示你已同意"
            android:textColor="@color/textLite"
            android:textSize="@dimen/text_size_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvAgreement"
            android:text="@string/text_tiger_agreement"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
