<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgActivity"
    android:orientation="vertical"
    tools:context="com.taichitiger.client.activity.OrderCommitActivity">

    <include layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="项目"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="￥0.0"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="数量"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="right|center_vertical">

                <com.taichitiger.client.view.ViewItem
                    android:id="@+id/viCount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:itemCount="0" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="小计"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="￥0.0"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingBottom="0dp"
                android:text="订单总价"
                android:textColor="@color/textNormal"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tvSum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="￥0.0"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:paddingBottom="0dp"
            android:text="@string/text_bound_phone"
            android:textColor="@color/textNormal"
            android:textSize="@dimen/text_size_15" />

        <View style="@style/divider" />

        <com.taichitiger.client.view.ListItem
            android:id="@+id/liPhone"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:gravity="center_vertical"
            app:itemDetail="@string/text_use_new_phone"
            app:itemName="13800138000"
            app:itemType="2"
            app:itemVisible="gone" />

        <Button
            android:id="@+id/btnCommit"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnFullHeight"
            android:layout_marginTop="24dp"
            android:text="@string/text_order_commit"
            android:theme="@style/btnCommitFull" />

    </LinearLayout>

</LinearLayout>
